--- a/src/main/resources/assets/skelethrone/lang/en_us.json
+++ b/src/main/resources/assets/skelethrone/lang/en_us.json
@@ -6,6 +6,8 @@
   "block.skelethrone.pink_garnet_block": "Pink Garnet Block",
   "block.skelethrone.raw_pink_garnet_block": "Raw Pink Garnet Block",
   "block.skelethrone.fossil_rock_block": "Fossil Block",
+  "block.skelethrone.pink_garnet_ore": "Pink Garnet Ore",
+  "block.skelethrone.pink_garnet_deepslate_ore": "Pink Garnet Deepslate Ore",
 
   "itemgroup.skelethrone.skelethrone_items_group": "Skelethrone Items",
   "itemgroup.skelethrone.skelethrone_blocks_group": "Skelethrone Blocks"
