Skelethrone_1.03(Discovery-phase)

--- a/src/main/resources/assets/skelethrone/lang/de_de.json
+++ b/src/main/resources/assets/skelethrone/lang/de_de.json
@@ -2,6 +2,10 @@
   "item.skelethrone.pink_garnet": "Rosaner Granat",
   "item.skelethrone.raw_pink_garnet": "Roher Rosaner Granat",
   "item.skelethrone.raw_fossil": "Verstaubtes Fossil",
+  "item.skelethrone.chisel": "Meißel",
+  "item.skelethrone.iron_chisel": "Eisenmeißel",
+  "item.skelethrone.gold_chisel": "Goldmeißel",
+  "item.skelethrone.diamond_chisel": "Dimantenmeißel",
 
   "block.skelethrone.pink_garnet_block": "Rosaner Granatblock",
   "block.skelethrone.raw_pink_garnet_block": "Roher Rosaner Granatblock",
