--- a/src/main/resources/assets/skelethrone/lang/en_us.json
+++ b/src/main/resources/assets/skelethrone/lang/en_us.json
@@ -2,6 +2,10 @@
   "item.skelethrone.pink_garnet": "Pink Garnet",
   "item.skelethrone.raw_pink_garnet": "Raw Pink Garnet",
   "item.skelethrone.raw_fossil": "Raw Fossil",
+  "item.skelethrone.chisel": "Chisel",
+  "item.skelethrone.iron_chisel": "Iron Chisel",
+  "item.skelethrone.gold_chisel": "Gold Chisel",
+  "item.skelethrone.diamond_chisel": "Diamond Chisel",
 
   "block.skelethrone.pink_garnet_block": "Pink Garnet Block",
   "block.skelethrone.raw_pink_garnet_block": "Raw Pink Garnet Block",
